Bug 621257 - Handle transition from buffering to seeking state correctly in Wave decoder.  r=roc a=roc